# retail-media-clv-optimizer

./: .coverage  .env.example  .gitignore  README.md  database.py  project.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
reports/: Retail_Media_Executive_Insights.pbix
scripts/: clv_analytics.py  ingest_data.py  upload_to_bigquery.py
sql/: rfm_segmentation.sql  schema.sql
src/clv_optimizer/: config.py  database.py  exceptions.py  pipeline.py
src/invoice_llm_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/retail_media_clv_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
